<resources>
    <string name="app_name">"CaloriesConverter "</string>
    <string name="convert">"Convert"</string>
    <string name="input">"Calories Converter"</string>
    <string name="exercise">"Exercise"</string>
    <string name="amount">"Amount"</string>
    <string name="unit">"Reps/Minutes"</string>
    <string name="reps">"Reps"</string>
    <string name="minutes">"Minutes"</string>
    <string name="equalto">"Equals to "</string>
    <string-array name="exercise_types">
        <item>"Pushup"</item>
        <item>"Situp"</item>
        <item>"Jumping Jacks"</item>
        <item>"Jogging"</item>
    </string-array>
</resources>
