<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/nav"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/input"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/exercise"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/amount"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:id="@+id/amount"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/unit"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radio_group"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reps"
                android:text="@string/reps"
                android:checked="true"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minutes"
                android:text="@string/minutes"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/convert"
            android:text="@string/convert"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/convert_result"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/equalto"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/equaltoSpinner"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"></Spinner>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/equaltoResult"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
    </LinearLayout>



</LinearLayout>
